# mk39-speech-recognition

./: .gitignore  README.md  sdkconfig  sdkconfig.old
app/: CMakeLists.txt  sdkconfig.old
app/main/: CMakeLists.txt  main.c  servoim.c  speech_commands_action.c
components/hardware_driver/led/: ws2812.c
components/led_im/: led_im.c
components/led_im/include/: led_im.h
components/led_strip/src/: led_strip_rmt_ws2812.c
components/ledim/: CMakeLists.txt  ledim.c
components/servo_im/: servo_im.c
components/servo_im/include/: servo_im.h
components/servoim/: CMakeLists.txt  servoim.c
examples/en_speech_commands_recognition/: sdkconfig
examples/en_speech_commands_recognition/main/: CMakeLists.txt  main.c  servoim.c  servoim.h
examples/wake_word_detection/: sdkconfig  sdkconfig.old
examples/wake_word_detection/main/: main.c
main/: CMakeLists.txt  idf_component.yml  main.c  servoim.c
